# goit-pythonweb-hw-08

./: docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 90664b181294_add_contact_table.py  f67e8f8c8fdf_init.py
src/: schemas.py
src/api/: contacts.py
src/conf/: config.py
src/database/: db.py
src/database/model/: Contacts.py
src/repository/: contacts.py
src/services/: contacts.py
